--- a/src/supermarket/barang/FormEditBarang2.form
+++ b/src/supermarket/barang/FormEditBarang2.form
@@ -378,10 +378,10 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="-2" pref="150" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lblidkaryawan" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblnmkaryawan" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblalamat" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblkota" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblidbarang" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblnamabrg" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblhrgbeli" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblhrgjual" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="144" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -390,10 +390,10 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="btnreset" min="-2" pref="115" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="txtidkaryawan" min="-2" pref="250" max="-2" attributes="0"/>
+                          <Component id="txtidbarang" min="-2" pref="250" max="-2" attributes="0"/>
                           <Component id="txtnama" min="-2" pref="250" max="-2" attributes="0"/>
-                          <Component id="txtalamat" min="-2" pref="250" max="-2" attributes="0"/>
-                          <Component id="txtkota" min="-2" pref="250" max="-2" attributes="0"/>
+                          <Component id="txthrgbeli" min="-2" pref="250" max="-2" attributes="0"/>
+                          <Component id="txthrgjual" min="-2" pref="250" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="150" max="-2" attributes="0"/>
                   </Group>
@@ -413,23 +413,23 @@
                       <Component id="lblTambKaryawan" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblidkaryawan" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtidkaryawan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblidbarang" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtidbarang" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblnmkaryawan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblnamabrg" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtnama" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblalamat" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtalamat" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblhrgbeli" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txthrgbeli" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblkota" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtkota" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblhrgjual" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txthrgjual" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -454,7 +454,7 @@
                 <Property name="text" type="java.lang.String" value="Edit Barang"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblidkaryawan">
+            <Component class="javax.swing.JLabel" name="lblidbarang">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
@@ -462,7 +462,7 @@
                 <Property name="text" type="java.lang.String" value="ID Barang"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblnmkaryawan">
+            <Component class="javax.swing.JLabel" name="lblnamabrg">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
@@ -470,7 +470,7 @@
                 <Property name="text" type="java.lang.String" value="Nama Barang"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtidkaryawan">
+            <Component class="javax.swing.JTextField" name="txtidbarang">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
@@ -488,7 +488,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtnamaActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblalamat">
+            <Component class="javax.swing.JLabel" name="lblhrgbeli">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
@@ -496,14 +496,14 @@
                 <Property name="text" type="java.lang.String" value="Harga Beli"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtalamat">
+            <Component class="javax.swing.JTextField" name="txthrgbeli">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblkota">
+            <Component class="javax.swing.JLabel" name="lblhrgjual">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
@@ -511,7 +511,7 @@
                 <Property name="text" type="java.lang.String" value="Harga Jual"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtkota">
+            <Component class="javax.swing.JTextField" name="txthrgjual">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
